--- a/Tutorial-Notebooks/HuggingFace_Tutorial.ipynb
+++ b/Tutorial-Notebooks/HuggingFace_Tutorial.ipynb
@@ -25,24 +25,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "YBjo_uvx7WEG"
-      },
-      "outputs": [],
       "source": [
         "from datasets import Dataset, load_dataset\n",
         "from transformers import AutoTokenizer, DataCollatorWithPadding, TFAutoModelForSequenceClassification\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import tensorflow as tf"
-      ]
+      ],
+      "metadata": {
+        "id": "YBjo_uvx7WEG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "k7wW_z3euNtm"
-      },
       "source": [
         "## Preprocess Dataset\n",
         "**Required changes**\n",
@@ -54,15 +51,13 @@
         "- Play with different values for `checkpoint` to see if accuracy improves\n",
         "- Look into [other models](https://huggingface.co/transformers/v3.0.2/model_doc/auto.html)\n",
         "- Adjust `batch_size` to see if processing time improves. Value should be a power of 2."
-      ]
+      ],
+      "metadata": {
+        "id": "k7wW_z3euNtm"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JhfTScGN9rI0"
-      },
-      "outputs": [],
       "source": [
         "dataset_name = \"imdb\" #@param [\"imdb\", \"amazon_us_reviews\"] {allow-input: true}\n",
         "checkpoint = \"bert-base-uncased\" #@param [\"bert-base-uncased\", \"bert-base-multilingual-uncased\", \"distilbert-base-uncased\", \"roberta-base\"] {allow-input: true}\n",
@@ -71,24 +66,24 @@
         "# \"bert\", \"roberta\", \"distilbert\", \"openai-gpt\", \"gpt2\", \"transfo-xl\", \"t5\", \"xlnet\", \"xlm\", \"ctrl\"\n",
         "# \"bert-base-uncased\", \"bert-base-cased\", \"roberta-base\", \"roberta-large\", \"distilbert-base-uncased\"\n",
         "batch_size =  8#@param {type:\"integer\"}"
-      ]
+      ],
+      "metadata": {
+        "id": "JhfTScGN9rI0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "uSXH19LIEb8R"
-      },
       "source": [
         "### Preprocess [IMDB dataset](https://huggingface.co/datasets/imdb)"
-      ]
+      ],
+      "metadata": {
+        "id": "uSXH19LIEb8R"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2QkaR0SK6Jp1"
-      },
-      "outputs": [],
       "source": [
         "# preprocess imdb dataset\n",
         "def format_data(split_name):\n",
@@ -113,24 +108,24 @@
         "    format_data(split)\n",
         "  # remove 'unsupervised' split to avoid tokenizing\n",
         "  raw_datasets.pop('unsupervised', None)"
-      ]
+      ],
+      "metadata": {
+        "id": "2QkaR0SK6Jp1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "m4yNX2DTEm9r"
-      },
       "source": [
         "### Preprocess [Amazon dataset](https://huggingface.co/datasets/amazon_us_reviews)\n"
-      ]
+      ],
+      "metadata": {
+        "id": "m4yNX2DTEm9r"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ECZA62V3F3EY"
-      },
-      "outputs": [],
       "source": [
         "# num_rows: 104975\n",
         "# input features = ['review_headline', 'review_body']\n",
@@ -162,25 +157,25 @@
         "  \n",
         "  print(raw_datasets)\n",
         "  print(df.head(10))"
-      ]
+      ],
+      "metadata": {
+        "id": "ECZA62V3F3EY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "cUST3w_2kIBh"
-      },
       "source": [
         "### Preprocess your dataset\n",
         "Learn more about [processing data](https://huggingface.co/course/chapter3/2?fw=tf)"
-      ]
+      ],
+      "metadata": {
+        "id": "cUST3w_2kIBh"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fGyuPBWwkPHB"
-      },
-      "outputs": [],
       "source": [
         "# add your code here\n",
         "def format_data(split_name):\n",
@@ -195,30 +190,35 @@
         "  splits = ['train','validation','test']\n",
         "  for split in splits:\n",
         "    format_data(split)"
-      ]
+      ],
+      "metadata": {
+        "id": "fGyuPBWwkPHB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "RpRT8qhTFU38"
-      },
-      "outputs": [],
       "source": [
         "# if raw_dataset not yet defined, load it and hope for the best\n",
         "if not ('raw_datasets' in globals()):\n",
         "  raw_datasets = load_dataset(dataset_name) "
-      ]
+      ],
+      "metadata": {
+        "id": "RpRT8qhTFU38"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "p5yQxRafLeBo"
-      },
       "source": [
         "### Tokenize Text\n",
         "Learn more about [tokenizers](https://huggingface.co/course/chapter2/4?fw=tf)"
-      ]
+      ],
+      "metadata": {
+        "id": "p5yQxRafLeBo"
+      }
     },
     {
       "cell_type": "code",
@@ -239,24 +239,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dryas7gKIpAq"
-      },
-      "outputs": [],
       "source": [
         "print(\"tokenized_datasets\", tokenized_datasets)\n",
         "for i in range(5):\n",
         "  print(f\"tokenized_datasets['validation'][{i}] {tokenized_datasets['validation'][i]}\")"
-      ]
+      ],
+      "metadata": {
+        "id": "dryas7gKIpAq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "92A0uBAPIoS7"
-      },
-      "outputs": [],
       "source": [
         "# column input and target names the language model expects, do not rename\n",
         "input_columns = [\"attention_mask\", \"input_ids\", \"token_type_ids\"]\n",
@@ -277,13 +272,15 @@
         "    collate_fn=data_collator,\n",
         "    batch_size=batch_size,\n",
         ")"
-      ]
+      ],
+      "metadata": {
+        "id": "92A0uBAPIoS7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "8QC4Y4GJvqKV"
-      },
       "source": [
         "## Load & Train Model\n",
         "**Required changes:**\n",
@@ -293,18 +290,21 @@
         "  - `BinaryCrossentropy` for binary classification (num_labels == 1)\n",
         "  - `SparseCategoricalCrossentropy` for multiple labels (num_labels >= 2)\n",
         "  - `CategoricalCrossentropy` for one-hot encoding, multi-label classification "
-      ]
+      ],
+      "metadata": {
+        "id": "8QC4Y4GJvqKV"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "num_labels = 2 #@param {type:\"integer\"}\n"
+      ],
       "metadata": {
         "id": "ap6RVqj1CwZa"
       },
-      "outputs": [],
-      "source": [
-        "num_labels = 2 #@param {type:\"integer\"}\n"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -325,33 +325,28 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ItiyFW8w_uXP"
-      },
       "source": [
         "### Hypertuning Parameters"
-      ]
+      ],
+      "metadata": {
+        "id": "ItiyFW8w_uXP"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rb9kYFWd_m27"
-      },
-      "outputs": [],
       "source": [
         "num_epochs = 10#@param {type:\"integer\"}\n",
         "steps_per_epoch = 100#@param {type:\"integer\"}\n",
-        "initial_learning_rate = 5e-5 #@param {type:\"number\"}"
-      ]
+        "initial_learning_rate = 5e-6 #@param {type:\"number\"}"
+      ],
+      "metadata": {
+        "id": "rb9kYFWd_m27"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KxJF-VsU16nx"
-      },
-      "outputs": [],
       "source": [
         "# The number of training steps is the number of samples in the dataset, divided by the batch size then multiplied\n",
         "# by the total number of epochs. Note that the tf_train_dataset here is a batched tf.data.Dataset,\n",
@@ -369,7 +364,12 @@
         "    metrics=[\"accuracy\"],\n",
         ")\n",
         "model.summary()"
-      ]
+      ],
+      "metadata": {
+        "id": "KxJF-VsU16nx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -391,31 +391,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "print(f\"{dataset_name}, {checkpoint}, {batch_size}, {num_epochs}, {steps_per_epoch}, {initial_learning_rate}, {history.history['accuracy'][-1]}, {history.history['val_accuracy'][-1]}\")"
+      ],
       "metadata": {
         "id": "amR5aNDqLAx5"
       },
-      "outputs": [],
-      "source": [
-        "print(f\"{dataset_name}, {checkpoint}, {batch_size}, {num_epochs}, {steps_per_epoch}, {initial_learning_rate}, {history.history['accuracy'][-1]}, {history.history['val_accuracy'][-1]}\")"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "KCR9hhPX6mZD"
-      },
       "source": [
         "## Evaluate Results"
-      ]
+      ],
+      "metadata": {
+        "id": "KCR9hhPX6mZD"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nPk-mqpM6Ffa"
-      },
-      "outputs": [],
       "source": [
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
@@ -433,7 +428,12 @@
         "plt.plot(epochs, val_loss, 'b', 'Validation Loss')\n",
         "plt.title('Training and validation loss')\n",
         "plt.figure()"
-      ]
+      ],
+      "metadata": {
+        "id": "nPk-mqpM6Ffa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -462,24 +462,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!pip install colorama"
+      ],
       "metadata": {
         "id": "XhL4PmNQw6La"
       },
-      "outputs": [],
-      "source": [
-        "!pip install colorama"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4wDBhxuYw64y"
-      },
-      "outputs": [],
       "source": [
         "from colorama import Fore, Style\n",
+        "\n",
         "def print_results(pred, actual):\n",
         "  print(raw_datasets[\"test\"][i][\"text\"])\n",
         "  print(Fore.GREEN if pred == actual else Fore.RED , end =\"\")\n",
@@ -496,58 +492,58 @@
         "  actual = raw_datasets[\"test\"][i][\"labels\"]\n",
         "  #if (pred != actual):\n",
         "  print_results(pred, actual)"
-      ]
+      ],
+      "metadata": {
+        "id": "4wDBhxuYw64y"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "54UUocXBcdn7"
-      },
       "source": [
         "## Save & Test Model\n",
         "Save your fine-tuned model for later use."
-      ]
+      ],
+      "metadata": {
+        "id": "54UUocXBcdn7"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "saved_path = \"./my_tuned_model\" #@param {type:\"string\"}"
+      ],
       "metadata": {
         "id": "Lj6r8jSgLqyk"
       },
-      "outputs": [],
-      "source": [
-        "saved_path = \"./my_tuned_model\" #@param {type:\"string\"}"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "model.save_pretrained(saved_path)"
+      ],
       "metadata": {
         "id": "43iXQmlAcjDv"
       },
-      "outputs": [],
-      "source": [
-        "model.save_pretrained(saved_path)"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "reloaded_model = model.from_pretrained(saved_path)"
+      ],
       "metadata": {
         "id": "FvVaHXbJck0v"
       },
-      "outputs": [],
-      "source": [
-        "reloaded_model = model.from_pretrained(saved_path)"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "q677ZNLfcnGS"
-      },
-      "outputs": [],
       "source": [
         "reloaded_preds = reloaded_model.predict(tf_test_dataset)[\"logits\"]\n",
         "reloaded_class_preds = np.argmax(reloaded_preds, axis=1)\n",
@@ -555,42 +551,40 @@
         "\n",
         "metric = load_metric(\"accuracy\")\n",
         "metric.compute(predictions=reloaded_class_preds, references=raw_datasets[\"test\"][\"labels\"])"
-      ]
+      ],
+      "metadata": {
+        "id": "q677ZNLfcnGS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "W7zu0zBv8nzS"
-      },
       "source": [
         "Notebook created by [ChengCheng Tan](mailto:ccstan99@gmail.com). Feedback welcomed!"
-      ]
+      ],
+      "metadata": {
+        "id": "W7zu0zBv8nzS"
+      }
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "collapsed_sections": [],
-      "name": "# AI4ALL - Summer Portfolio Project (Text Dataset) *TUTORIAL*",
-      "private_outputs": true,
+      "name": "HF - Text Classification *TUTORIAL*",
       "provenance": [],
-      "toc_visible": true
-    },
-    "gpuClass": "standard",
-    "kernelspec": {
-      "display_name": "Python 3.8.2 64-bit",
-      "language": "python",
-      "name": "python3"
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "private_outputs": true
     },
     "language_info": {
-      "name": "python",
-      "version": "3.8.2"
+      "name": "python"
     },
-    "vscode": {
-      "interpreter": {
-        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-      }
-    }
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "gpuClass": "standard",
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
