--- a/_posts/2022-05-09-nlp-notes.md
+++ b/_posts/2022-05-09-nlp-notes.md
@@ -4,6 +4,7 @@ title: "NLP Notes"
 subtitle: "Models and Dataset References"
 background: '/img/posts/2022-05-09-nlp-notes.jpg'
 ---
+
 I just completed the [DeepLearning.ai's NLP specialization](https://www.coursera.org/specializations/natural-language-processing) on Coursera, went through the [Stanford CS224n course in NLP](http://web.stanford.edu/class/cs224n/) and read a bunch of journal articles. Sorting through the alphabet soup was an undertaking in itself. Since I kept referring to my notes to compare features between the different language models and looking up benchmark datasets & sources, I figured I'd pop the charts in here in case they're helpful to others.
 
 ## Language Models
@@ -16,8 +17,8 @@ L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
 | 2013 | [word2vec](https://www.tensorflow.org/tutorials/text/word2vec) | [Word Representations in Vectors](https://arxiv.org/abs/1301.3781) |
 | 2014 | [GloVe](https://nlp.stanford.edu/projects/glove/) | [Global Vectors](https://www.semanticscholar.org/paper/GloVe%3A-Global-Vectors-for-Word-Representation-Pennington-Socher/f37e1b62a767a307c046404ca96bc140b3e68cb5)
 | 2018 | [GPT](https://huggingface.co/openai-gpt) | [Generative Pre-trained Transformer](https://cdn.openai.com/research-covers/language-unsupervised/language_understanding_paper.pdf) | L=12, A=12, H=768
-| 2019 | [GPT-2](https://huggingface.co/gpt2) | [Unsupervised Multitask Learning](https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf) |  L=48, A=??, H=1600
-| 2020 | [GPT-3](https://beta.openai.com/docs/models/gpt-3) | [Few-Shot Learners](https://arxiv.org/abs/2005.14165) | L=96, A=??, H=12288
+| 2019 | [GPT-2](https://huggingface.co/gpt2) | [Unsupervised Multitask Learning](https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf) |  L=48, A=48, H=1600
+| 2020 | [GPT-3](https://beta.openai.com/docs/models/gpt-3) | [Few-Shot Learners](https://arxiv.org/abs/2005.14165) | L=96, A=96, H=12288
 | 2018 | [BERT](https://huggingface.co/bert-large-cased) | [Bidirectional Encoder Representation for Transformers](https://arxiv.org/abs/1810.04805) | L=24, A=16, H=1024
 | 2019 | [RoBERTa](https://huggingface.co/roberta-large) | [Robustly Optimized BERT](https://arxiv.org/abs/1907.11692) | L=24, A=16, H=1024
 | 2019 | [T5](https://huggingface.co/t5-11b) | [Transfer Learning with Text-to-Text Transformer](https://arxiv.org/abs/1910.10683) | L=24, A=128, H=768
@@ -52,6 +53,10 @@ L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
 | CoQA | [Conversation Question Answering](https://huggingface.co/datasets/coqa)
 | SWAG | [Situations with Adversarial Generation](https://huggingface.co/datasets/swag)
 | C4 | [Colossal Clean Crawled Corpus](https://huggingface.co/datasets/c4)
+| | [BookCorpus](https://huggingface.co/datasets/bookcorpus) |
+| | [WikiText](https://huggingface.co/datasets/wikitext) |
+| | [WebText](https://huggingface.co/datasets/openwebtext)
+| PTB | [Penn Treebank](https://paperswithcode.com/dataset/penn-treebank) | Parts-of-speech tags
 | WSC | [Winograd Schema Challenge](https://huggingface.co/datasets/winograd_wsc)
 | | [WinoGrande](https://huggingface.co/datasets/winogrande) | Crowd-sourced WSC
 
@@ -71,7 +76,7 @@ L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
 | UDA | Unsupervised Data Augmentation
 | RL2 | Reinforcement Learning Fast & Slow
 | MAML | Model-Agnostic Meta-Learning
-| BPE | [Byte-Pair Encoding](https://paperswithcode.com/method/bpe)
 | WMT | [Workshop in Machine Translation](https://aclanthology.org/venues/wmt/)
 | SemEval | [Workshop on Semantic Evaluatio](https://semeval.github.io/) |
+| BPE | [Byte-Pair Encoding](https://paperswithcode.com/method/bpe) | Used to tokenize & build vocabulary lists
 | TF-IDF | Term Frequency–Inverse Document Frequency | Reflects word importance for document in corpus
