post use + technovation

--- a/_posts/2022-01-01-archive.md
+++ b/_posts/2022-01-01-archive.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: "Samples"
-subtitle: "Archived from Cheng2 Designs Portfolio"
+title: "Archived Samples"
+subtitle: "Cheng2 Designs Portfolio"
 background: '/img/posts/2022-01-01-archive.jpg'
 ---
+
+Here's archived work from antiquity, circa early 2000s, when most interactive work was done using the now defunct Adobe Flash and ActionScript. ([video demo](https://www.youtube.com/watch?v=h2rdDYZ_3bY))
+
 ## Interactive Projects
 
 - **Nike Team Sports** — Suite of uniform builders for basketball, baseball, football, camp series
@@ -14,11 +17,9 @@ background: '/img/posts/2022-01-01-archive.jpg'
 
 <img src="/img/2022-01-01-archive/refractec1.jpg" width="270" /> <img src="/img/2022-01-01-archive/refractec2.jpg" width="270" /> <img src="/img/2022-01-01-archive/refractec3.jpg" width="270" />
 
-- [Ofivina 01](ofivina.cd): CD-ROM commemorating arts exhibit & festival
+- **Ofivina 01**: CD-ROM commemorating arts exhibit & festival
 
 <img src="/img/2022-01-01-archive/ofivina1.jpg" width="270" /> <img src="/img/2022-01-01-archive/ofivina2.jpg" width="270" /> <img src="/img/2022-01-01-archive/ofivina4.jpg" width="270" />
-
-([video demo](https://www.youtube.com/watch?v=h2rdDYZ_3bY))
 
 ## Websites
 
