--- a/_posts/2022-05-09-nlp-notes.md
+++ b/_posts/2022-05-09-nlp-notes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "NLP Notes"
+title: "Natural Language Processing Notes"
 subtitle: "Models and Dataset References"
 background: '/img/posts/2022-05-09-nlp-notes.jpg'
 ---
@@ -9,8 +9,8 @@ I just completed the [DeepLearning.ai's NLP specialization](https://www.coursera
 
 ## Language Models
 
-Transformer specs indicate max values:
-L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
+Transformer specs indicate maximum values for:
+L = # layers/blocks, A = # attention heads, D = # dimensions, P = # params.
 
 | year  | model | description | specs |
 | :---: | :---- | :---------- | ----- |
@@ -25,8 +25,8 @@ L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
 
 ## Datasets
 
-| dataset | full name | description |
-| :------ | :-------- | :---------- |
+| dataset | full name | notes |
+| :------ | :-------- | :---- |
 | [**GLUE**](https://gluebenchmark.com/) | [General Language Understanding Evaluation](https://huggingface.co/datasets/glue)
 | CoLA | [Corpus of Linguistic Acceptability](https://huggingface.co/datasets/glue/viewer/cola/train) | Sentence grammatically correct?
 | SST | [Stanford Sentiment Treebank](https://huggingface.co/datasets/glue/viewer/sst2/train) | Movie review sentiment analysis
@@ -62,8 +62,8 @@ L = # layers/blocks, A = # attention heads, H = # hidden dimensions.
 
 ## Acronyms
 
-| term | expanded | description |
-| :--- | :------- | :---------- |
+| term | expanded | notes |
+| :--- | :------- | :---- |
 | NLP | Natural Language Processing
 | NLU | Natural Language Understanding
 | NLI | Natural Language Inference
