--- a/_posts/2022-01-01-archive.md
+++ b/_posts/2022-01-01-archive.md
@@ -11,21 +11,27 @@ Here's archived work from antiquity, circa early 2000s, when most interactive wo
 
 - **Nike Team Sports** — Suite of uniform builders for basketball, baseball, football, camp series
 
-<img src="/img/2022-01-01-archive/nike1.jpg" width="270" /> <img src="/img/2022-01-01-archive/nike3.jpg" width="270" /> <img src="/img/2022-01-01-archive/nike4.jpg" width="270" />
+<img src="/img/2022-01-01-archive/nike1.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/nike3.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/nike4.jpg" width="30%" />
 
-- **Refractec** — Eye surgery equipment tutorial for Ignite Health
+- **Refractec** — Eye surgery equipment tutorial for Ignite Health, visual design + implementation
 
-<img src="/img/2022-01-01-archive/refractec1.jpg" width="270" /> <img src="/img/2022-01-01-archive/refractec2.jpg" width="270" /> <img src="/img/2022-01-01-archive/refractec3.jpg" width="270" />
+<img src="/img/2022-01-01-archive/refractec1.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/refractec2.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/refractec3.jpg" width="30%" />
 
-- **Ofivina 01**: CD-ROM commemorating arts exhibit & festival
+- **Ofivina 01**: CD-ROM commemorating arts exhibit & festival, visual design + implementation
 
-<img src="/img/2022-01-01-archive/ofivina1.jpg" width="270" /> <img src="/img/2022-01-01-archive/ofivina2.jpg" width="270" /> <img src="/img/2022-01-01-archive/ofivina4.jpg" width="270" />
+<img src="/img/2022-01-01-archive/ofivina1.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/ofivina2.jpg" width="30%" /> 
+<img src="/img/2022-01-01-archive/ofivina4.jpg" width="30%" />
 
 ## Websites
 
-<img src="/img/2022-01-01-archive/cheng2-web.png"  width="270" /> <img src="/img/2022-01-01-archive/freearts-web.png"  width="270" />
-<img src="/img/2022-01-01-archive/lutzky-web.png" width="270" />
-<img src="/img/2022-01-01-archive/sawmeetsaw-web.png"  width="270" /> <img src="/img/2022-01-01-archive/otto-web.png"  width="270" /> <img src="/img/2022-01-01-archive/emily-web.png"  width="270" />
+<img src="/img/2022-01-01-archive/cheng2-web.png"  width="30%" /> <img src="/img/2022-01-01-archive/freearts-web.png"  width="30%" />
+<img src="/img/2022-01-01-archive/lutzky-web.png" width="30%" />
+<img src="/img/2022-01-01-archive/sawmeetsaw-web.png"  width="30%" /> <img src="/img/2022-01-01-archive/otto-web.png"  width="30%" /> <img src="/img/2022-01-01-archive/emily-web.png"  width="30%" />
 
 ## Logos
 
@@ -33,7 +39,10 @@ Here's archived work from antiquity, circa early 2000s, when most interactive wo
 
 ## Print
 
-<img src="/img/2022-01-01-archive/shh-fotos-cartridge.jpg" width="200" /> <img src="/img/2022-01-01-archive/shh-fotos-mailers.jpg" width="200" /> <img src="/img/2022-01-01-archive/zing-fotos-choco.jpg" width="200" /> <img src="/img/2022-01-01-archive/zing-fotos-spice.jpg" width="200" />
+<img src="/img/2022-01-01-archive/shh-fotos-cartridge.jpg" width="20%" /> 
+<img src="/img/2022-01-01-archive/shh-fotos-mailers.jpg" width="20%" /> 
+<img src="/img/2022-01-01-archive/zing-fotos-choco.jpg" width="20%" /> 
+<img src="/img/2022-01-01-archive/zing-fotos-spice.jpg" width="20%" />
 
 ## Publications
 
