--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -13,14 +13,18 @@ Since we had access to OpenAI's very powerful GPT-3, the original plan was to us
 
 ## Tensorflow.js in the Browser
 
-Having used features like Google search, we're familiar with its ability to dynamically update the list of related search options as the user types. Since we're not Google, I hadn't dreamt that we could do then same. However, in my free time, I'm quite a tutorial junkie. I ran across a tutorial to create your own [Teachable Machine](https://codelabs.developers.google.com/tensorflowjs-transfer-learning-teachable-machine#0) and a number of other demos with [tensorflow.js (TFJS)](https://tensorflow.github.io/tfjs/) allowing models to make AI predictions in the browser. I suddenly realized that if it's possible to train a model to identify objects from the desktop video camera on a browser in realtime, we must be able to run our semantic search in the browser, dynamically updating results as the user types in the search bar. To keep things simple, I started with a pre-trained model that was already optimized for web use. I found a promising model called the [Universal Sentence Encoder (USE)](https://github.com/tensorflow/tfjs-models/tree/master/universal-sentence-encoder) which uses a 512-dimension vector to embed the sentences in contrast to GPT-3 which uses 12,288-dimensions. As a result the embeddings file for USE was only around 1.5MB compared to GPT-3's embeddings which was over 150MB. We obviously sacrificed some accuracy but the responsiveness really enhanced the user experience. To use the TFJS and USE libraries, we first imported the following scripts within the HTML:
+Having used features like Google search, we're familiar with its ability to dynamically update the list of related search options as the user types. Since we're not Google, I hadn't dreamt that we could do then same. However, in my free time, I'm quite a tutorial junkie. I ran across a tutorial to create your own [Teachable Machine](https://codelabs.developers.google.com/tensorflowjs-transfer-learning-teachable-machine#0) and a number of other demos with [tensorflow.js (TFJS)](https://tensorflow.github.io/tfjs/) allowing models to make AI predictions in the browser. I suddenly realized that if it's possible to train a model to identify objects from the desktop video camera on a browser in realtime, we must be able to run our semantic search in the browser, dynamically updating results as the user types in the search bar.
+
+## Universal Sentence Encoder
+
+To keep things simple, I started with a pre-trained model that was already optimized for web use. I found a promising model called the [Universal Sentence Encoder (USE)](https://github.com/tensorflow/tfjs-models/tree/master/universal-sentence-encoder) which uses a 512-dimension vector to embed the sentences in contrast to GPT-3 which uses 12,288-dimensions. As a result the embeddings file for USE was only around 1.5MB compared to GPT-3's embeddings which was over 150MB. We obviously sacrificed some accuracy but the responsiveness really enhanced the user experience. To use the TFJS and USE libraries, we first imported the following scripts within the HTML:
 
 ```html
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs" type="text/javascript"/>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/universal-sentence-encoder"/>
 ```
 
-Before using the models, make sure both libraries and the model have been loaded. Then, you're ready to create sentence embeddings for your questions. USE stores embeddings as a 2D tensors with 512 dimensions or 512 separate values. Think of the embeddings as a numerical representation of a sentence or (in our case a question) where each dimension represents some feature or meaningful information about the sentence.
+To begin, make sure both libraries and the model have been loaded. Then, you're ready to create sentence embeddings for your questions. The USE stores embeddings as a 2D tensors with 512 dimensions or 512 separate values. Think of the embeddings as a numerical representation of a sentence or (in our case a question) where each dimension represents some feature or meaningful information about the sentence.
 
 ```javascript
 // load Tensorflow's universal sentence encoder model
@@ -32,27 +36,28 @@ const allEncodings = (await model.embed(questions)).arraySync()
 
 We had a few hundred questions, so on my desktop, embeddings all the questions only took a few seconds. But on laptops and other machines, the initial embedding of all the questions took several minutes, which was intolerable. So I saved the embeddings so it was just a matter of loading them. Soon, things were working smoothly, even on mobile phones.
 
-Now we're ready to process the query when a user ask a new question. First, we must create embeddings for that new question in order to compare it to find the nearest embedding from within our existing list of questions.
+Now we're ready to process the query when a user ask a new question. First, we must create embeddings for that new question in order to find the nearest embedding from within our existing list of all questions.
 
 ```javascript
 const runSemanticSearch = (searchQuery) => {
 
-  langModel.embed(searchQuery).then((encoding) => {
-    // numerator of cosine similar is dot prod since vectors are normalized
-    const scores = tf.matMul(encoding, allEncodings, false, true).dataSync()
+  encoding = await langModel.embed(searchQuery)
 
-    // Tensorflow requires explicit memory management to avoid memory leaks
-    encoding.dispose()
+  // numerator of cosine similar is dot prod since vectors are normalized
+  const scores = tf.matMul(encoding, allEncodings, false, true).dataSync()
 
-    const questionsScored = questions.map((title, index) => ({ title, score }))
-    questionsScored.sort((a,b)  => b.score - a.score)
-    const searchResults = questionsScored.slice(0, numResults)
-  })
+  // Tensorflow requires explicit memory management to avoid memory leaks
+  encoding.dispose()
+
+  // sort by scores then return top 5 results
+  const questionsScored = questions.map((question, index) => ({ question, score }))
+  questionsScored.sort((a,b)  => b.score - a.score)
+  const searchResults = questionsScored.slice(0, 5)
 
 }
 ```
 
-USE also has a QnA model for question-answering. I tried the embedding all of the database answers to see if it would help with the search. Unfortunately, I didn't see a marked improvement, so I'll need to play around with that a bit more.
+The USE also has a QnA model for question-answering. I tried the embedding all of the database answers to see if it would help with the search. Unfortunately, I didn't see a marked improvement, so I'll need to play around with that a bit more.
 
 ## Worker for GUI Blocking
 
