--- a/_posts/2022-01-01-archive.md
+++ b/_posts/2022-01-01-archive.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Archived Samples"
-subtitle: "Cheng2 Designs Portfolio"
+subtitle: "Cheng2 Design Portfolio"
 background: '/img/posts/2022-01-01-archive.jpg'
 ---
 
