add colab badge duplicates table

--- a/_posts/2022-06-14-sbert.md
+++ b/_posts/2022-06-14-sbert.md
@@ -48,6 +48,19 @@ for paraphrase in paraphrases[0:100]:
     print(f'{sentences[i]}\n{sentences[j]}\nscore:{score:.2f}\n')  
 ```
 
+Here's a sample output of the top scoring duplicates when we first ran paraphrase_mining through our list of questions. They mostly seem pretty reasonable. We still kept a human in the loop to decide which version to keep or whether questions should be reworded if they were indeed semantically dissimilar.
+
+| Question1 | Question2 | Score |
+| :--- | :--- | :--- |
+| [Who helped create Stampy?](https://stampy.ai/wiki/Who_helped_create_Stampy%3F) | [Who created Stampy?](https://stampy.ai/wiki/Who_created_Stampy%3F) | 0.98 |
+| [Is humanity doomed?](https://stampy.ai/wiki/Is_humanity_doomed%3F) | [How doomed is humanity?](https://stampy.ai/wiki/How_doomed_is_humanity%3F) | 0.95 |
+| [What is a canonical question on Stampy's Wiki?](https://stampy.ai/wiki/What_is_a_canonical_question_on_Stampy%27s_Wiki%3F) | [What is a canonical version of a question on Stampy's Wiki?](https://stampy.ai/wiki/What_is_a_canonical_version_of_a_question_on_Stampy%27s_Wiki%3F) | 0.93 |
+| [Why can’t we just “put the AI in a box” so it can’t influence the outside world?](https://stampy.ai/wiki/Why_can%E2%80%99t_we_just_%E2%80%9Cput_the_AI_in_a_box%E2%80%9D_so_it_can%E2%80%99t_influence_the_outside_world%3F) | [Couldn’t we keep the AI in a box and never give it the ability to manipulate the external world?](https://stampy.ai/wiki/Couldn%E2%80%99t_we_keep_the_AI_in_a_box_and_never_give_it_the_ability_to_manipulate_the_external_world%3F) | 0.92 |
+| [How might a superintelligence technologically manipulate humans?](https://stampy.ai/wiki/How_might_a_superintelligence_technologically_manipulate_humans%3F) | [How might a superintelligence socially manipulate humans?](https://stampy.ai/wiki/How_might_a_superintelligence_socially_manipulate_humans%3F) | 0.92 |
+| [Why is AI Safety important?](https://stampy.ai/wiki/Why_is_AI_Safety_important%3F) | [Why is safety important for smarter-than-human AI?](https://stampy.ai/wiki/Why_is_safety_important_for_smarter-than-human_AI%3F) | 0.91 |
+| [Can we tell an AI just to figure out what we want, then do that?](https://stampy.ai/wiki/Can_we_tell_an_AI_just_to_figure_out_what_we_want,_then_do_that%3F) | [Can we just tell an AI to do what we want?](https://stampy.ai/wiki/Can_we_just_tell_an_AI_to_do_what_we_want%3F) | 0.90 |
+| [What is AI Safety?](https://stampy.ai/wiki/What_is_AI_Safety%3F) | [Why is AI Safety important?](https://stampy.ai/wiki/Why_is_AI_Safety_important%3F) | 0.90 |
+
 The complete functional code in this [notebook](https://colab.research.google.com/github/ccstan99/ccstan99.github.io/blob/main/docs/sbert-paraphrase-mining.ipynb). As you will see, the usage is straightforward for any list of sentences from your own dataset. Pick a model and try it out!
 
 ## References
