--- a/docs/huggingface-text-classification.ipynb
+++ b/docs/huggingface-text-classification.ipynb
@@ -6,6 +6,7 @@
         "id": "ab3QS8yJR2si"
       },
       "source": [
+        "<a href=\"https://colab.research.google.com/github/ccstan99/ccstan99.github.io/blob/main/docs/huggingface-text-classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "# AI4ALL - Summer Portfolio Project (Text Dataset)\n",
         "Adapted from the [Hugging Face tutorial](https://huggingface.co/course/chapter3/3?fw=tf), which provides an excellent introduction to the field of [Natural Language Processing (NLP)](https://huggingface.co/course/chapter1/2?fw=tf) and an overview to the large language models based on the [Transformer Architecture](https://huggingface.co/course/chapter1/4?fw=tf)\n",
         "\n",
