--- a/docs/sbert-paraphrase-mining.ipynb
+++ b/docs/sbert-paraphrase-mining.ipynb
@@ -3,6 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<a href=\"https://colab.research.google.com/github/ccstan99/ccstan99.github.io/blob/main/docs/sbert-paraphrase-mining.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "# Sentence-BERT Paraphrase Mining\n",
         "[Sentence-BERT (SBERT)](https://sbert.net/) is a modification of BERT but is optimized for generating accurate and useful sentence embeddings. It uses Siamese and triplet network structure to derive embeddings that can be compared efficiently using cosine similarity. This reduces the time for finding the most similar pairs among 10,000 sentences from 65 hours with BERT or RoBERTa down to about 5 seconds, without sacrificing accuracy!"
       ],
