--- a/_posts/2022-06-14-sbert.md
+++ b/_posts/2022-06-14-sbert.md
@@ -7,7 +7,7 @@ background: '/img/posts/2022-06-14-sbert.jpg'
 
 ## Finding Duplicates
 
-A community of volunteers have been culling through questions about AGI Safety from multiple sources including YouTube video comments and a Discord server for the [Stampy](https://stampy.ai/wiki/Main_Page) project. Questions marked as high interest are then answered and evaluated within the community. Due to the distributed origins, we realized there's likely to be quite a number of duplicate or at least semantically very similar questions in the database. The concern is, of course, that this could be a potentially time-consuming and resource-heavy operation to compare every question in the database with every other, resulting in the dreaded O(n<sup>2</sup>).
+A community of volunteers have been culling through questions about AGI Safety from multiple sources including YouTube video comments and a Discord server for the [stampy.ai](https://stampy.ai/wiki/Stampy) project. Questions marked as high interest are then answered and evaluated within the community. Due to the distributed origins, we realized there's likely to be quite a number of duplicate or at least semantically very similar questions in the database. The concern is, of course, that this could be a potentially time-consuming and resource-heavy operation to compare every question in the database with every other, resulting in the dreaded O(n<sup>2</sup>).
 
 ## Sentence-BERT
 
