--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -7,7 +7,7 @@ background: '/img/posts/2022-07-05-use.jpg'
 
 ## Semantic Search
 
-I've been working on a website for community generated questions and answers about AGI Safety. At the moment, the database contains several hundred questions, but the goal is to eventually grow to be thousands or more.
+I've been working on a website for [stampy.ai](https://stampy.ai/wiki/Stampy), the community generated questions and answers about AGI Safety. At the moment, the database contains several hundred questions, but the goal is to eventually grow to be thousands or more.
 
 Since we had access to OpenAI's very powerful GPT-3, the original plan was to use its semantic search capabilities. Instead of only matching keywords, semantic search allows users to ask questions and search for already answered questions that are semantically similar or essentially mean the same thing. In order accomplish that, questions are converted in sentence embeddings or vectors which can then be compared using cosine similarity. If the vectors are already normalized, cosine similarity is calculated by a quick matrix multiplication. Due to the cost concerns and the large files associated with embedding all of our questions, we realized we'd need to limit how often we made calls to OpenAI's API and only submit requests once the user has completed typing their question.
 
