--- a/_posts/2022-08-07-ai4all.md
+++ b/_posts/2022-08-07-ai4all.md
@@ -9,7 +9,7 @@ background: '/img/posts/2022-08-11-ai4all.jpg'
 
 [AI4ALL](https://ai-4-all.org/) opens doors to Artificial Intelligence for historically excluded talent through education and mentorship. They conduct [summer programs](https://ai-4-all.org/summer-programs/) at universities across the US and offer extensive support to the alumni through their [Changemakers in AI](https://ai-4-all.org/changemakers/) program.
 
-<img src="/img/posts/2022-08-11-ai4all1.png" width="100%" />
+<img src="/img/posts/2022-08-11-ai4all1.png" width="100%" style="border:1px solid #eee" />
 
 ## Summer Program
 
