update stampy subtitle

--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Stampy UI
-description: Figma Prototype & Identity Design
+subtitle: Figma Prototype & Identity Design
 background: '/img/posts/2022-03-15-stampy.jpg'
 ---
 
