--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -25,7 +25,7 @@ The existing logo was much beloved within the community. However, I wanted to cl
 | :-------------: | :-----------: |
 | <img src="/img/posts/2022-03-15-stampy-logo2.png" width="200"/> | <img src="/img/posts/2022-03-15-stampy-logo1.png" width="200"/> |
 
-## Wrapup
+## Results
 
 Overall, I tried to keep the design clean and minimalistic, allowing users to focus on the content. To add a bit of fun, the icons switch from black & white into full color on hover. The banner is decorated with colorful geometric figures which actually form a secret message. Here's final mockup with the new logo.
 
