--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -9,7 +9,7 @@ background: '/img/posts/2022-07-05-use.jpg'
 
 I've been working on a website for [stampy.ai](https://stampy.ai/wiki/Stampy), the community generated questions and answers about AGI Safety. At the moment, the database contains several hundred questions, but the goal is to eventually grow to be thousands or more.
 
-Since we had access to OpenAI's very powerful GPT-3, the original plan was to use its semantic search capabilities. Instead of only matching keywords, semantic search allows users to ask questions and search for already answered questions that are semantically similar or essentially mean the same thing. In order accomplish that, questions are converted in sentence embeddings or vectors which can then be compared using cosine similarity. If the vectors are already normalized, cosine similarity is calculated by a quick matrix multiplication. Due to the cost concerns and the large files associated with embedding all of our questions, we realized we'd need to limit how often we made calls to OpenAI's API and only submit requests once the user has completed typing their question.
+Since we had access to OpenAI's very powerful GPT-3, the original plan was to use its semantic search capabilities. Instead of only matching keywords, semantic search allows users to ask questions and search for already answered questions that are semantically similar or essentially mean the same thing. In order accomplish that, questions are converted in sentence embeddings or vectors which can then be compared using cosine similarity. If the vectors are already normalized, cosine similarity is calculated by a quick matrix multiplication. Due to the cost and the large files associated with embedding all of our questions, we realized we'd need to limit how often we made calls to OpenAI's API and only submit requests once the user has completed typing their question.
 
 ## Tensorflow.js in the Browser
 
@@ -17,7 +17,7 @@ Having used features like Google search, we're familiar with its ability to dyna
 
 ## Universal Sentence Encoder
 
-To keep things simple, I started with a pre-trained model that was already optimized for web use. I found a promising model called the [Universal Sentence Encoder (USE)](https://github.com/tensorflow/tfjs-models/tree/master/universal-sentence-encoder) which uses a 512-dimension vector to embed the sentences in contrast to GPT-3 which uses 12,288-dimensions. As a result the embeddings file for USE was only around 1.5MB compared to GPT-3's embeddings which was over 150MB. We obviously sacrificed some accuracy but the responsiveness really enhanced the user experience. To use the TFJS and USE libraries, we first imported the following scripts within the HTML:
+To keep things simple, I started with a pre-trained model that was already optimized for web use. I found a promising model called the [Universal Sentence Encoder (USE)](https://github.com/tensorflow/tfjs-models/tree/master/universal-sentence-encoder) which uses a 512-dimension vector to embed the sentences in contrast to GPT-3 which uses 12,288-dimensions. As a result the embeddings file for USE was only around 1.5MB compared to GPT-3's embeddings which was over 150MB. That was for OpenAI's largest Davinci model; going with a lighter model would lessen the gap but we'd still have expense issues. We obviously sacrificed some accuracy but the responsiveness really enhanced the user experience. To use the TFJS and USE libraries, we first imported the following scripts within the HTML:
 
 ```html
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs" type="text/javascript"/>
