--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -19,7 +19,7 @@ It's been quite some time since I did any UI/UX work, so I'm rather rusty. Howev
 
 ## Logo Redesign
 
-The existing logo was much beloved within the community. However, I wanted to clean it up a bit, to hopefully simplify things for later marketing and animation purposes. There were a few key elements they wanted retained: the backdrop for the face is the valuable [inverted Jenny stamp](https://en.wikipedia.org/wiki/Inverted_Jenny) and the eyes of the friendly [Microsoft Clippy office assistant](https://en.wikipedia.org/wiki/Office_Assistant), with a nod to the paperclip maximizing conundrum presented in Nick Bostrom's [Superintelligence](https://en.wikipedia.org/wiki/Superintelligence:_Paths,_Dangers,_Strategies). The [new logo](https://github.com/StampyAI/ StampyAIAssets) (left) is mostly a modernized rendition of the original (right) but has more geometric shapes for whimsy and softer, gentler eyes.
+The existing logo was much beloved within the community. However, I wanted to clean it up a bit, to hopefully simplify things for later marketing and animation purposes. There were a few key elements they wanted retained: the backdrop for the face is the valuable [inverted Jenny stamp](https://en.wikipedia.org/wiki/Inverted_Jenny) and the eyes of the friendly [Microsoft Clippy office assistant](https://en.wikipedia.org/wiki/Office_Assistant), with a nod to the paperclip maximizing conundrum presented in Nick Bostrom's [Superintelligence](https://en.wikipedia.org/wiki/Superintelligence:_Paths,_Dangers,_Strategies). The [new logo](https://github.com/StampyAI/StampyAIAssets) (left) is mostly a modernized rendition of the original (right) but has more geometric shapes for whimsy and softer, gentler eyes.
 
 | redesigned logo | original logo |
 | :-------------: | :-----------: |
@@ -31,6 +31,6 @@ Overall, I tried to keep the design clean and minimalistic, allowing users to fo
 
 [<img src="/img/posts/2022-03-15-stampy-preview.png" width="70%" style="border:1px solid #ccc; display: block; margin: 0 auto;" />](https://ui.stampy.ai/)
 
-Edited to add: We had a soft launch for the [alpha version](http://www.ui.stampy.ai) in July. I also wrote about working on their [semantic search](http://localhost:4000/2022/07/05/use.html) and identifying [duplicate questions](http://localhost:4000/2022/06/14/sbert.html).
+Edited to add: We had a soft launch for the [alpha version](http://www.ui.stampy.ai) in July. I also wrote about working on their [semantic search](http://localhost:4000/2022/07/05/use.html) and identifying [duplicate questions](http://localhost:4000/2022/06/14/sbert.html). If you're interested in getting involved with AGI Safety and Alignment or would like to get work on some [open source projects](https://github.com/StampyAI), we'd love for you to join the [Discord group](https://stampy.ai/wiki/Discord_invite)!
 
 It's been refreshing to take a little break from all the reading & studying and actually building something. Learning comes in so many shapes!
