--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -15,7 +15,7 @@ Between the reading group and researching for the next project, I'm rapidly drow
 
 - [Understanding AI Alignment Research: A Systematic Analysis](https://arxiv.org/abs/2206.02841) [[GitHub]](https://github.com/moirage/alignment-research-dataset) (2022)
 - [SPECTER: Document-level Representation Learning using Citation-informed Transformers](https://arxiv.org/abs/2004.07180) [[GitHub]](https://github.com/allenai/specter) (2020)
-- [TLDR: Extreme Summarization of Scientific Documents](https://arxiv.org/abs/2004.15011) (2020)
+- [TLDR: Extreme Summarization of Scientific Documents](https://arxiv.org/abs/2004.15011) [[GitHub]](https://github.com/allenai/scitldr) (2020)
 - [SCIBERT: A Pretrained Language Model for Scientific Text](https://arxiv.org/abs/1903.10676v3) [[GitHub]](https://github.com/allenai/scibert) (2019)
 - [S2ORC: The Semantic Scholar Open Research Corpus](https://arxiv.org/abs/1903.10676v3) [(GitHub)](https://github.com/allenai/s2orc) (2019)
 - [Construction of the Literature Graph in Semantic Scholar](https://arxiv.org/abs/1805.02262) (2018)
